--- a/documents.html
+++ b/documents.html
@@ -36,47 +36,37 @@
 
             <!-- Document Management Section (Initially hidden/disabled) -->
             <div id="documentManagementSection" class="d-none">
-                 <h4 id="selectedFacilityName">Documents for: </h4>
+                 <h4 id="selectedFacilityName">Files for: </h4>
                  <hr>
-                 <!-- Associated Documents Card -->
+                 <!-- Breadcrumb Navigation -->
+                 <nav aria-label="breadcrumb" id="breadcrumbNav" class="mb-3" style="display: none;">
+                     <ol class="breadcrumb" id="breadcrumbList">
+                         <!-- Breadcrumbs will be populated by JS -->
+                         <li class="breadcrumb-item"><a href="#" data-folder-id="root-placeholder"><i class="fas fa-home"></i></a></li>
+                     </ol>
+                 </nav>
+
+                 <!-- File Explorer Card -->
                  <div class="card mb-3">
-                     <div class="card-header">Associated Documents</div>
-                     <div class="card-body">
-                         <div class="mb-3">
-                             <label for="documentUploadInput" class="form-label">Upload New Document</label>
-                             <div class="input-group">
-                                  <input type="file" class="form-control" id="documentUploadInput" aria-describedby="uploadDocumentButton">
-                                  <button class="btn btn-outline-secondary" type="button" id="uploadDocumentButton"><i class="fas fa-upload"></i> Upload</button>
-                             </div>
-                              <div id="uploadStatusMessage" class="form-text mt-1"></div> <!-- For upload feedback -->
+                     <div class="card-header d-flex justify-content-between align-items-center">
+                         <span>Current Folder Contents</span>
+                         <div class="btn-group" role="group" aria-label="File actions">
+                             <button type="button" class="btn btn-sm btn-outline-primary" id="newFolderButton" title="New Folder"><i class="fas fa-folder-plus"></i> New Folder</button>
+                             <button type="button" class="btn btn-sm btn-outline-secondary" id="uploadFileButton" title="Upload File"><i class="fas fa-upload"></i> Upload File</button>
+                             <button type="button" class="btn btn-sm btn-outline-info" id="addLinkButton" title="Add Link"><i class="fas fa-link"></i> Add Link</button>
                          </div>
-
-                         <hr> <!-- Separator between upload and add link -->
-
-                         <div class="mb-3">
-                              <label class="form-label">Add Website Link</label>
-                              <div class="input-group mb-2">
-                                  <span class="input-group-text"><i class="fas fa-link"></i></span>
-                                  <input type="url" class="form-control" id="linkUrlInput" placeholder="https://example.com" required>
-                              </div>
-                              <div class="input-group">
-                                  <span class="input-group-text"><i class="fas fa-tag"></i></span>
-                                  <input type="text" class="form-control" id="linkDescriptionInput" placeholder="Link Description (e.g., Company Website, News Article)" required>
-                                  <button class="btn btn-outline-secondary" type="button" id="addLinkButton"><i class="fas fa-plus"></i> Add Link</button>
-                              </div>
-                              <div id="addLinkStatusMessage" class="form-text mt-1"></div> <!-- For add link feedback -->
+                     </div>
+                     <div class="card-body p-0"> <!-- Remove padding for table -->
+                         <!-- File Explorer View Area -->
+                         <div id="fileExplorerView" class="table-responsive">
+                             <!-- Table or Grid will be populated by JS -->
+                             <p class="text-muted p-3" id="loadingMessage">Loading...</p>
+                             <p class="text-muted p-3 d-none" id="emptyFolderMessage">This folder is empty.</p>
                          </div>
-
-                         <hr>
-
-                         <h5>Associated Items (Files & Links)</h5> <!-- Changed heading -->
-                         <ul class="list-group" id="documentList">
-                             <!-- Document links will be loaded here by JavaScript -->
-                             <li class="list-group-item text-muted" id="noDocumentsMessage">Select a facility to see its documents.</li>
-                         </ul>
+                         <!-- TODO: Add Modals for Upload/Add Link/New Folder forms -->
                      </div>
                  </div>
-                 <!-- End Associated Documents Card -->
+                 <!-- End File Explorer Card -->
             </div>
             <!-- End Document Management Section -->
         </main> <!-- End Main Content Area -->
