--- a/documents.html
+++ b/documents.html
@@ -36,37 +36,52 @@
 
             <!-- Document Management Section (Initially hidden/disabled) -->
             <div id="documentManagementSection" class="d-none">
-                 <h4 id="selectedFacilityName">Files for: </h4>
-                 <hr>
-                 <!-- Breadcrumb Navigation -->
-                 <nav aria-label="breadcrumb" id="breadcrumbNav" class="mb-3" style="display: none;">
-                     <ol class="breadcrumb" id="breadcrumbList">
-                         <!-- Breadcrumbs will be populated by JS -->
-                         <li class="breadcrumb-item"><a href="#" data-folder-id="root-placeholder"><i class="fas fa-home"></i></a></li>
-                     </ol>
-                 </nav>
+                <div class="row">
+                    <!-- Tree View Column -->
+                    <div class="col-md-3 border-end" id="folderTreeViewContainer">
+                        <h5>Folder Structure</h5>
+                        <hr>
+                        <div id="folderTreeView" style="max-height: 60vh; overflow-y: auto;">
+                            <!-- Tree view will be populated by JS -->
+                            <p class="text-muted small">Select a facility to view folders.</p>
+                        </div>
+                    </div>
 
-                 <!-- File Explorer Card -->
-                 <div class="card mb-3">
-                     <div class="card-header d-flex justify-content-between align-items-center">
-                         <span>Current Folder Contents</span>
-                         <div class="btn-group" role="group" aria-label="File actions">
-                             <button type="button" class="btn btn-sm btn-outline-primary" id="newFolderButton" title="New Folder"><i class="fas fa-folder-plus"></i> New Folder</button>
-                             <button type="button" class="btn btn-sm btn-outline-secondary" id="uploadFileButton" title="Upload File"><i class="fas fa-upload"></i> Upload File</button>
-                             <button type="button" class="btn btn-sm btn-outline-info" id="addLinkButton" title="Add Link"><i class="fas fa-link"></i> Add Link</button>
-                         </div>
-                     </div>
-                     <div class="card-body p-0"> <!-- Remove padding for table -->
-                         <!-- File Explorer View Area -->
-                         <div id="fileExplorerView" class="table-responsive">
-                             <!-- Table or Grid will be populated by JS -->
-                             <p class="text-muted p-3" id="loadingMessage">Loading...</p>
-                             <p class="text-muted p-3 d-none" id="emptyFolderMessage">This folder is empty.</p>
-                         </div>
-                         <!-- TODO: Add Modals for Upload/Add Link/New Folder forms -->
-                     </div>
-                 </div>
-                 <!-- End File Explorer Card -->
+                    <!-- Main Content Column -->
+                    <div class="col-md-9" id="mainDocumentArea">
+                        <h4 id="selectedFacilityName">Files for: </h4>
+                        <hr>
+                        <!-- Breadcrumb Navigation -->
+                        <nav aria-label="breadcrumb" id="breadcrumbNav" class="mb-3" style="display: none;">
+                            <ol class="breadcrumb" id="breadcrumbList">
+                                <!-- Breadcrumbs will be populated by JS -->
+                                <li class="breadcrumb-item"><a href="#" data-folder-id="root-placeholder"><i class="fas fa-home"></i></a></li>
+                            </ol>
+                        </nav>
+
+                        <!-- File Explorer Card -->
+                        <div class="card mb-3">
+                            <div class="card-header d-flex justify-content-between align-items-center">
+                                <span>Current Folder Contents</span>
+                                <div class="btn-group" role="group" aria-label="File actions">
+                                    <button type="button" class="btn btn-sm btn-outline-primary" id="newFolderButton" title="New Folder"><i class="fas fa-folder-plus"></i> New Folder</button>
+                                    <button type="button" class="btn btn-sm btn-outline-secondary" id="uploadFileButton" title="Upload File"><i class="fas fa-upload"></i> Upload File</button>
+                                    <button type="button" class="btn btn-sm btn-outline-info" id="addLinkButton" title="Add Link"><i class="fas fa-link"></i> Add Link</button>
+                                </div>
+                            </div>
+                            <div class="card-body p-0"> <!-- Remove padding for table -->
+                                <!-- File Explorer View Area -->
+                                <div id="fileExplorerView" class="table-responsive">
+                                    <!-- Table or Grid will be populated by JS -->
+                                    <p class="text-muted p-3" id="loadingMessage">Loading...</p>
+                                    <p class="text-muted p-3 d-none" id="emptyFolderMessage">This folder is empty.</p>
+                                </div>
+                                <!-- TODO: Add Modals for Upload/Add Link/New Folder forms -->
+                            </div>
+                        </div>
+                        <!-- End File Explorer Card -->
+                    </div> <!-- End Main Content Column -->
+                </div> <!-- End row -->
             </div>
             <!-- End Document Management Section -->
         </main> <!-- End Main Content Area -->
